topic_2/terraform/applications/manifests/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
  namespace: asiayo
spec:
  selector:
    app: web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
